crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-39.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: !0
});
var r = function() {
    function e(e, t) {
        for(var n = 0; n < t.length; n++){
            var r = t[n];
            r.enumerable = r.enumerable || !1;
            r.configurable = !0;
            "value" in r && (r.writable = !0);
            Object.defineProperty(e, r.key, r);
        }
    }
    return function(t, n, r) {
        return n && e(t.prototype, n), r && e(t, r), t;
    };
}(), o = function(e) {
    if (e && e.__esModule) return e;
    var t = {};
    if (null != e) for(var n in e)Object.prototype.hasOwnProperty.call(e, n) && (t[n] = e[n]);
    return t.default = e, t;
}(require("./module-3.js")), i = require("./module-11.js"), a = require("./module-24.js"), u = function(e) {
    return e && e.__esModule ? e : {
        default: e
    };
}(require("./module-38.js"));
var l = function(e) {
    function t() {
        return function(e, t) {
            if (!(e instanceof t)) throw new TypeError("Cannot call a class as a function");
        }(this, t), function(e, t) {
            if (!e) throw new ReferenceError("this hasn't been initialised - super() hasn't been called");
            return !t || "object" != typeof t && "function" != typeof t ? e : t;
        }(this, (t.__proto__ || Object.getPrototypeOf(t)).apply(this, arguments));
    }
    return function(e, t) {
        if ("function" != typeof t && null !== t) throw new TypeError("Super expression must either be null or a function, not " + typeof t);
        e.prototype = Object.create(t && t.prototype, {
            constructor: {
                value: e,
                enumerable: !1,
                writable: !0,
                configurable: !0
            }
        });
        t && (Object.setPrototypeOf ? Object.setPrototypeOf(e, t) : e.__proto__ = t);
    }(t, o.Component), r(t, [
        {
            key: "render",
            value: function() {
                return console.log(this.props), o.createElement("div", null, u.default);
            }
        }
    ]), t;
}();
exports.default = (0, i.compose)(a.withRouter)(l);
