crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-40.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
module.exports = Array.isArray || function(e) {
    return "[object Array]" == Object.prototype.toString.call(e);
};
