crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-41.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
module.exports = function(e) {
    if (!e.webpackPolyfill) {
        var t = Object.create(e);
        t.children || (t.children = []);
        Object.defineProperty(t, "loaded", {
            enumerable: !0,
            get: function() {
                return t.l;
            }
        });
        Object.defineProperty(t, "id", {
            enumerable: !0,
            get: function() {
                return t.i;
            }
        });
        Object.defineProperty(t, "exports", {
            enumerable: !0
        });
        t.webpackPolyfill = 1;
    }
    return t;
};
