crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-44.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
module.exports = "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED";
